<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="410dp"
                android:layout_height="120dp"
                android:src="@drawable/logoynombre" />

            <TextView
                android:id="@+id/txt_sobrenosotros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sobre_nosotros"
                android:textSize="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:id="@+id/txt_descripcion"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_descripcion"
                android:textSize="19dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="@color/primaryTextColor"
                android:gravity="center"/>
            <ImageView
                android:id="@+id/edificio"
                android:layout_width="410dp"
                android:layout_marginTop="20dp"
                android:layout_height="220dp"
                android:src="@drawable/edificio" />
            <TextView
                android:id="@+id/txt_mision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_mision"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor" />
            <TextView
                android:id="@+id/txt_misiond"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/ser_el_aliado_estrat_gico_para_la_reinvenci_n_digital_y_operativa_de_nuestros_clientes_a_partir_de_modelos_de_negocio_innovadores_que_transformen_y_beneficien_a_la_sociedad"
                android:textSize="19dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="@color/primaryTextColor" />
            <TextView
                android:id="@+id/txt_vision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Visión"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor" />
            <TextView
                android:id="@+id/txt_visiond"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/proporcionar_a_la_sociedad_un_liderazgo_tecnol_gico_de_vanguardia_que_facilite_la_evoluci_n_al_mundo_digital_la_inclusi_n_social_y_la_sostenibilidad_del_medio_ambiente"
                android:textSize="19dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="@color/primaryTextColor" />
            <TextView
                android:id="@+id/siguenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siguenos_en_todas_nuestras_redes"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor" />
            <ImageButton
                android:id="@+id/ButtonTwitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/twitter"
                android:background="@color/secondaryColor"
                android:layout_marginHorizontal="250dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitStart"/>
            <ImageButton
                android:id="@+id/ButtonInstagram"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/insta"
                android:background="@color/secondaryTextColor"
                android:layout_marginTop="-50dp"
                android:layout_marginHorizontal="120dp"
                android:scaleType="fitStart"
                />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginTop="20dp"/>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>